[Feature: #164012830] fix cover image width stretching

--- a/src/app/article/ListArticle.scss
+++ b/src/app/article/ListArticle.scss
@@ -4,5 +4,8 @@
 
 .card-image img {
   cursor: pointer;
-  height: 13em;
+  height: 14em;
+  width: auto !important;
+  display: block;
+  margin: 0 auto;
 }
